--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Redirecting to https://bio.site/DJGenerator</title>
-    <meta http-equiv="refresh" content="0; URL=https://bio.site/DJGenerator">
-    <link href="https://bio.site/DJGenerator" rel="me">
+    <title>Redirecting to https://madhouse.webhop.me</title>
+    <meta http-equiv="refresh" content="0; URL=https://madhouse.webhop.me">
+    <link href="https://madhouse.webhop.me" rel="me">
     <link href="https://ravenation.club/@djgenerator" rel="me">
   </head>
   <body style="margin: 0; padding: 0">
     <a
-      href="https://bio.site/DJGenerator"
+      href="https://madhouse.webhop.me"
       style="
         display: block;
         height: 100vh;
@@ -19,7 +19,7 @@
         color: white;
       "
     >
-      https://bio.site/DJGenerator
+      https://madhouse.webhop.me
     </a>
   </body>
 </html>
