--- a/why-am-i-banned.html
+++ b/why-am-i-banned.html
@@ -1,1 +1,4 @@
-Your IP has been spamming our server with unsolicted requests, please don't spam!
+Your IP has been spamming our server (madhouse.webhop.me) with unsolicted requests,
+we only block IP addresses when they make too many repeated 404 (file not found) calls.
+
+Too many 404's usualy indicates you are trying to hack us.
