--- a/why-am-i-banned.html
+++ b/why-am-i-banned.html
@@ -1,4 +1,8 @@
-Your IP has been spamming our server (madhouse.webhop.me) with unsolicted requests,
-we only block IP addresses when they make too many repeated 404 (file not found) calls.
+<html>
+  <body>
+    <p>Your IP has been spamming our server (madhouse.webhop.me) with unsolicted requests,
+we only block IP addresses when they make too many repeated 404 (file not found) calls.</p>
 
-Too many 404's usualy indicates you are trying to hack us.
+    <p>Too many 404's usualy indicates you are trying to hack us.</p>
+  </body>
+</html>
