--- a/why-am-i-banned.html
+++ b/why-am-i-banned.html
@@ -1,4 +1,7 @@
 <html>
+  <head>
+    
+  </head>
   <body>
     <p>Your IP has been spamming our server (madhouse.webhop.me) with unsolicted requests,
 we only block IP addresses when they make too many repeated 404 (file not found) calls.</p>
