--- a/why-am-i-banned.html
+++ b/why-am-i-banned.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    
+    <title>You're IP is abusing our server!</title>
   </head>
   <body>
     <p>Your IP has been spamming our server (madhouse.webhop.me) with unsolicted requests,
