--- a/why-am-i-banned.html
+++ b/why-am-i-banned.html
@@ -2,10 +2,11 @@
   <head>
     <title>You're IP is abusing our server!</title>
   </head>
-  <body>
-    <p>Your IP has been spamming our server (madhouse.webhop.me) with unsolicted requests,
+  <body style="background-color:black;">
+    <h1 style="color:White;">You're IP is abusing our server!</h1>
+    <p style="color:White;">Your IP has been spamming our server (madhouse.webhop.me) with unsolicted requests,
 we only block IP addresses when they make too many repeated 404 (file not found) calls.</p>
 
-    <p>Too many 404's usualy indicates you are trying to hack us.</p>
+    <p style="color:White;">Too many 404's usualy indicates you are trying to hack us.</p>
   </body>
 </html>
