--- a/why-am-i-banned.html
+++ b/why-am-i-banned.html
@@ -3,7 +3,7 @@
     <title>You're IP is abusing our server!</title>
   </head>
   <body style="background-color:black;">
-    <h1 style="color:firebrick;">You're IP is abusing our server!</h1>
+    <h1 style="color:firebrick;">Your IP is abusing our server!</h1>
     <p style="color:White;">Your IP has been spamming our server (madhouse.webhop.me) with unsolicted requests,
 we only block IP addresses when they make too many repeated 404 (file not found) calls.</p>
 
