--- a/why-am-i-banned.html
+++ b/why-am-i-banned.html
@@ -4,9 +4,10 @@
   </head>
   <body style="background-color:black;">
     <h1 style="color:firebrick;">Your IP is abusing our server!</h1>
-    <p style="color:White;">Your IP has been spamming our server (madhouse.webhop.me) with unsolicted requests,
+    <p style="color:White;">Your IP has been spamming our server (https://madhouse.webhop.me) with unsolicted requests,
 we only block IP addresses when they make too many repeated 404 (file not found) calls.</p>
 
     <p style="color:White;">Too many 404's usualy indicates you are trying to hack us.</p>
+    <p style="color:White;">If you believe this is a mistake, please get in touch with us!</p>
   </body>
 </html>
