--- a/why-am-i-banned.html
+++ b/why-am-i-banned.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>You're IP is abusing our server!</title>
+    <title>Your IP is abusing our server!</title>
   </head>
   <body style="background-color:black;">
     <h1 style="color:firebrick;">Your IP is abusing our server!</h1>
