--- a/why-am-i-banned.html
+++ b/why-am-i-banned.html
@@ -8,6 +8,6 @@
 we only block IP addresses when they make too many repeated 404 (file not found) calls.</p>
 
     <p style="color:White;">Too many 404's usualy indicates you are trying to hack us.</p>
-    <p style="color:White;">If you believe this is a mistake, please get in touch with us!</p>
+    <p style="color:White;">If you believe this block has been made by mistake, please get in touch with us!</p>
   </body>
 </html>
