--- a/why-am-i-banned.html
+++ b/why-am-i-banned.html
@@ -3,7 +3,7 @@
     <title>Your IP is abusing our server!</title>
   </head>
   <body style="background-color:black;">
-    <h1 style="color:firebrick;">IP ADDRESS BLOCKED DUE TO ABUSE!</h1>
+    <h1 style="color:firebrick;">YOUR IP ADDRESS IS BLOCKED!</h1>
     <p style="color:White;">Your IP has been spamming our server (https://madhouse.webhop.me) with unsolicted requests,
 we only block IP addresses when they make too many repeated 404 (file not found) calls.</p>
 
