--- a/why-am-i-banned.html
+++ b/why-am-i-banned.html
@@ -3,6 +3,9 @@
     <title>Your IP is abusing our server!</title>
   </head>
   <body style="background-color:black;">
+    <a href="https://madhouse.webhop.me">
+      <img src="MadHouse-Logo-1600px-Transparent-Wht-150x150.png" width="128" height="128">
+    </a>
     <h1 style="color:firebrick;">YOUR IP ADDRESS IS BLOCKED!</h1>
     <p style="color:White;">Your IP has been spamming our server (https://madhouse.webhop.me) with unsolicted requests,
 we only block IP addresses when they make too many repeated 404 (file not found) calls.</p>
