--- a/why-am-i-banned.html
+++ b/why-am-i-banned.html
@@ -4,7 +4,10 @@
   </head>
   <body style="background-color:black;">
     <a href="https://madhouse.webhop.me" style="color:White;">
-      <img src="MadHouse-Logo-1600px-Transparent-Wht-150x150.png" width="40px" height="40px"><i>The MadHouse</i>
+      <img src="MadHouse-Logo-1600px-Transparent-Wht-150x150.png" width="40px" height="40px">
+    </a>
+    <a href="https://madhouse.webhop.me" style="color:White;">
+      <i>The MadHouse</i>
     </a>
     <h1 style="color:firebrick;">YOUR IP ADDRESS IS BLOCKED!</h1>
     <p style="color:White;">Your IP has been spamming our server (https://madhouse.webhop.me) with unsolicted requests,
