--- a/why-am-i-banned.html
+++ b/why-am-i-banned.html
@@ -4,10 +4,10 @@
   </head>
   <body style="background-color:black;">
     <p>
-      <a href="https://madhouse.webhop.me" style="color:White;">
+      <a href="https://madhouse.webhop.me" style="color:White;text-decoration: none;">
         <img src="MadHouse-Logo-1600px-Transparent-Wht-150x150.png" width="40px" height="40px">
       </a>
-      <a href="https://madhouse.webhop.me" style="color:White;">
+      <a href="https://madhouse.webhop.me" style="color:White;text-decoration: none;">
         <i>The MadHouse</i>
       </a>
     </p>
