--- a/why-am-i-banned.html
+++ b/why-am-i-banned.html
@@ -3,12 +3,16 @@
     <title>Your IP is abusing our server!</title>
   </head>
   <body style="background-color:black;">
-    <div class="container" style="display: flex;">
+    <div style="display: flex;">
       <a href="https://madhouse.webhop.me" style="color:White;text-decoration:none;">
-        <img src="MadHouse-Logo-1600px-Transparent-Wht-150x150.png" width="30px" height="30px">
+        <p style="margin-top:10px;margin-bottom:100px;margin-left:10px;">
+          <img src="MadHouse-Logo-1600px-Transparent-Wht-150x150.png" width="30px" height="30px">
+        </p>
       </a>
       <a href="https://madhouse.webhop.me" style="color:White;text-decoration:none;">
-        <i>The MadHouse</i>
+        <p style="margin-top:10px;margin-bottom:100px;padding:10px;text-align:justify;">
+          <i>The MadHouse</i>
+        </p>
       </a>
     </div>
     <h1 style="color:firebrick;">YOUR IP ADDRESS IS BLOCKED!</h1>
