--- a/why-am-i-banned.html
+++ b/why-am-i-banned.html
@@ -14,6 +14,7 @@
           <i>The MadHouse</i>
         </p>
       </a>
+      <hr style="width:90%;color:purple;" ></hr>
     </div>
     <h1 style="color:firebrick;">YOUR IP ADDRESS IS BLOCKED!</h1>
     <p style="color:White;">Your IP has been spamming our server (https://madhouse.webhop.me) with unsolicted requests,
