--- a/why-am-i-banned.html
+++ b/why-am-i-banned.html
@@ -15,7 +15,7 @@
         </p>
       </a>
     </div>
-    <hr style="width:90%;color:purple;" ></hr>
+    <hr style="width:90%;border:1px solid purple;" ></hr>
     <h1 style="color:firebrick;">YOUR IP ADDRESS IS BLOCKED!</h1>
     <p style="color:White;">Your IP has been spamming our server (https://madhouse.webhop.me) with unsolicted requests,
 we only block IP addresses when they make too many repeated 404 (file not found) calls.</p>
