--- a/why-am-i-banned.html
+++ b/why-am-i-banned.html
@@ -11,7 +11,7 @@
       </a>
       <a href="https://madhouse.webhop.me" style="color:White;text-decoration:none;">
         <p style="margin-top:5px;margin-bottom:5px;padding:10px;text-align:justify;">
-          <i>The MadHouse</i>
+          <i><b>The MadHouse</b></i>
         </p>
       </a>
     </div>
